--- a/src/components/accordion-item/accordion-item.css
+++ b/src/components/accordion-item/accordion-item.css
@@ -1,4 +1,4 @@
-.accordion-item {
+/*.accordion-item {
   display: flex;
 }
 
@@ -16,4 +16,4 @@
 
 .user-info-property {
   font-weight: bold;
-}
+}*/
