--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,13 +1,195 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
+  color: #424242;
+  font-size: 16px;
 }
 
 li {
   list-style: none;
 }
 
+.panel {
+  cursor: pointer;
+  padding: 0 15px;
+  text-transform: capitalize;
+}
+
 .container {
-  width: 1200px;
+  width: 100%;
   max-width: 1200px;
+  padding: 0 15px;
   margin: 0 auto;
+}
+
+.content {
+  width: 1200px;
+  height: auto;
+  background-color: #EBEBEB;
+}
+
+.panel:nth-child(2n-1) {
+  background-color: #C8C8C8;
+}
+
+.panel-heading {
+  width: 100%;
+  height: 100%;
+  min-height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.panel-heading span {
+  height: 100%;
+  width: 200px;
+} 
+
+.panel-body {
+  width: 100%;
+}
+
+.panel-collapse {
+  width: 100%;
+  height: 250px;
+}
+
+.img-small {
+  width: 48px;
+  height: 48px;
+  border: 3px solid #fff;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 20px;
+}
+
+.img-small img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.fas {
+  font-size: 30px;
+}
+  /*Simple show and hide */
+
+.panel .panel-body {
+  display: none;
+  width: 100%;
+}
+
+.collapse-wrapper {
+  height: 150px;
+  margin-top: 20px;
+}
+
+.collapse-wrapper h3 span {
+ margin-right: 10px;
+}
+
+.collapse-flex-wrapper {
+  display: flex;
+  height: 100px;
+  align-items: center;
+}
+
+.collapse-img {
+  width: 130px;
+  height: 130px;
+  border: 5px solid #fff;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.collapse-img img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.collapse-item span {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.panel.is-expanded .panel-body {
+  display: block;
+  height: 150px;
+}
+
+.collapse-flex {
+  width: 80%;
+  max-height: 70px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+
+/*Simple CSS transition of max-height*/
+
+.panel .panel-collapse {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s cubic-bezier(.525,.66,.495,1.4);
+}
+
+.panel.is-expanded .panel-collapse {
+  max-height: 200px;
+  padding-left: 80px;
+}
+
+
+/*loader*/
+
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100px;
+  height: 100px;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  visibility: hidden;
+  transition-delay: 0.2s;
+}
+
+.loader .icon {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: url('../../images/ico_loader.svg') no-repeat 0 0;
+  background-size: 248px 248px;
+}
+
+.is-loading .loader {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.3s linear, visibility 0.3s linear;
+    z-index: 3;
+}
+.is-loading .icon {
+      animation: spin 500ms infinite linear;
+}
+
+
+@keyframes spin {
+  0% {
+    transform: rotate(0);
+    transform-origin: center center;
+  }
+
+  100% {
+    transform: rotate(360deg);
+    transform-origin: center center;
+  }
 }
